2008-05-24  Albert Chu <chu11@llnl.gov>

	* common/src/tool-config-file-common.h,
	common/src/tool-config-file-common.c, ipmi-fru/: Add config file
	option for --skip-checks.

	* doc/freeipmi.conf.5.pre.in: Update appropriately for additions.
	
2008-05-23  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-workaround-heading-text.man: Tweak
	description.

	* bmc-config/, pef-config/, ipmi-sensors-config/: Add config file
	support.
	
	* doc/freeipmi.conf.5.pre.in: Update appropriately for additions.

	* common/doc/manpage-common-known-issues.man: Update with config
	file info.

	* contrib/: Update instructions with config file information.

2008-05-22  Albert Chu <chu11@llnl.gov>

	* common/src/tool-config-file-common.c: Minor tweaks.

	* common/doc/: More manpage updates.

	* ipmimonitoring/, ipmi-fru/, ipmi-sel/, ipmi-sensors/, ipmi-oem/,
	ipmi-chassis/, bmc-info/, bmc-device/, ipmi-raw/: Add config file
	support.

	* doc/freeipmi.conf.5.pre.in: Update appropriately for additions.

	* bmc-watchdog/: Tweak error messages to be consistent to other tools.
	
2008-05-21  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-ignore-sdr-cache.man: Fix option
	description typo.

	* common/src/tool-sdr-cache-common.c (sdr_cache_flush_cache),
	ipmimonitoring/, ipmi-fru/, ipmi-sel/, ipmi-sensors/,
	ipmi-sensors-config/: Fix --quiet-cache to work with flush option.

	* ipmipower/src/ipmipower_config.h,
	ipmipower/src/ipmipower_config.c: Rename to ipmipower_arg.h and
	ipmipower_arg.c for consistency to other tools.  Rename functions
	appropriately.
	
2008-05-21  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi.conf.5.pre.in: New file.

	* freeipmi.spec.in, configure.ac, doc/Makefile.am: Adjust for new manpage.

	* doc/freeipmi.7.pre.in: Fix typo.

	* ipmiconsole/, ipmipower/: Adjust manpages appropriately.  Fix
	some typos along the way.

	* Globally clarify that --disable-auto-probe is for in-band only.

2008-05-21  Albert Chu <chu11@llnl.gov>
